--- a/webapp/src/css/job.component.css
+++ b/webapp/src/css/job.component.css
@@ -1,73 +1,59 @@
-/*----------------------------------------
+/*
+Error: File to import not found or unreadable: ../../../lib/mimas/variables.
+        on line 4 of job.component.scss
 
-  KORDE - VARIABLES
+1: 
+2: // Imports
+3: // --------------------
+4: @import "../../../lib/mimas/variables";
+5: 
+6: // Local variables
+7: // --------------------
+8: $header-height: 60px;
+9: $content-height: 280px;
 
------------------------------------------*/
-@font-face {
-  font-family: 'GTWalsheim';
-  font-weight: 800;
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Black.eot");
-  /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Black.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.ttf") format("truetype");
-  /* Safari, Android, iOS */ }
-@font-face {
-  font-family: 'GTWalsheim';
-  font-weight: 600;
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot");
-  /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype");
-  /* Safari, Android, iOS */ }
-@font-face {
-  font-family: 'GTWalsheim';
-  font-weight: bold;
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot");
-  /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype");
-  /* Safari, Android, iOS */ }
-@font-face {
-  font-family: 'GTWalsheim';
-  font-weight: 400;
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot");
-  /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype");
-  /* Safari, Android, iOS */ }
-@font-face {
-  font-family: 'GTWalsheim';
-  font-weight: normal;
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot");
-  /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype");
-  /* Safari, Android, iOS */ }
-@font-face {
-  font-family: 'GTWalsheim';
-  font-weight: 300;
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Light.eot");
-  /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.ttf") format("truetype");
-  /* Safari, Android, iOS */ }
-@font-face {
-  font-family: 'GTWalsheim';
-  font-weight: 100;
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.eot");
-  /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.ttf") format("truetype");
-  /* Safari, Android, iOS */ }
-.job-header-info {
-  position: absolute;
-  bottom: -280px;
-  right: 12%;
-  z-index: 1337;
-  width: 400px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); }
-  .job-header-info .header {
-    width: 100%;
-    height: 60px;
-    background: #fc797c;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px; }
-  .job-header-info .content {
-    width: 100%;
-    height: 280px;
-    background: #fff; }
-
-/*# sourceMappingURL=job.component.css.map */
+Backtrace:
+job.component.scss:4
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:67:in `rescue in import'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:45:in `import'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:28:in `imported_file'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:37:in `css_import?'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:313:in `visit_import'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:159:in `visit'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:36:in `css_tree'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin.rb:82:in `update_stylesheets'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:340:in `watch_or_update'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/exec/base.rb:52:in `parse'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/lib/sass/exec/base.rb:19:in `parse!'
+/var/lib/gems/2.3.0/gems/sass-3.4.22/bin/scss:13:in `<top (required)>'
+/usr/local/bin/scss:23:in `load'
+/usr/local/bin/scss:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: File to import not found or unreadable: ../../../lib/mimas/variables.\A         on line 4 of job.component.scss\A \A 1: \A 2: // Imports\A 3: // --------------------\A 4: @import \"../../../lib/mimas/variables\";\A 5: \A 6: // Local variables\A 7: // --------------------\A 8: $header-height: 60px;\A 9: $content-height: 280px;"; }
